Fix for item 14973/Styling and spacing on details panel needs to be improved

--- a/src/styles/select.less
+++ b/src/styles/select.less
@@ -18,4 +18,5 @@
 
 .ant-form-item-label > label {
   white-space: normal;
+  font-weight: bold;
 }
